Agora sim todos os relacionamentos estão funcionando